ingress-hosts.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-hosts

spec:
  rules:
  - host: api.sa.homework.net
    http:
      paths:
        - backend:
           serviceName: main
           servicePort: 8000

  - host: api.sa.homework.net
    http:
      paths:
        - backend:
           serviceName: web1
           servicePort: 8000

  - host: web2.api.sa.homework.net
    http:
      paths:
        - backend:
           serviceName: web2
           servicePort: 8000

  - host: cat.api.sa.homework.net
    http:
      paths:
        - backend:
           serviceName: tomcat
           servicePort: 8080
